:sparkles: feat: add estrutura header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,15 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <main>
-
+        <header>
+            <img src="./img/Left Detail.svg" alt="">
+            <p> 9:41 AM</p>
+            <img src="./img/Battery.svg" alt="">
+        </header>
     </main>
 </body>
+
 </html>
