html tela principal

--- a/index.html
+++ b/index.html
@@ -20,6 +20,44 @@
             <p> 9:41 AM</p>
             <img src="./img/Battery.svg" alt="">
         </header>
+        <h1>Filmes em Destaque</h1>
+        <section class="todos_filmes">           
+                <div class="filmes">
+                    <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                    <h2>Divertidamente 2</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                    <h2>Um lugar silencioso</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/to_de_graca.png" alt="Filme to de graça">
+                    <h2>To de Graça</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/bad_boys.png" alt="Bad boys">
+                    <h2>Bad Boys: Até o fim</h2>
+                </div>
+        </section>
+        <h1>Em breve</h1>
+        <section class="todos_filmes">           
+                <div class="filmes">
+                    <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                    <h2>Divertidamente 2</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                    <h2>Um lugar silencioso</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/to_de_graca.png" alt="Filme to de graça">
+                    <h2>To de Graça</h2>
+                </div>
+                <div class="filmes">
+                    <img src="img/bad_boys.png" alt="Bad boys">
+                    <h2>Bad Boys: Até o fim</h2>
+                </div>
+        </section>
     </main>
 </body>
 
