--- a/index.html
+++ b/index.html
@@ -21,43 +21,65 @@
             <img src="./img/Battery.svg" alt="">
         </header>
         <h1>Filmes em Destaque</h1>
-        <section class="todos_filmes">           
-                <div class="filmes">
-                    <img src="img/divertidamente.png" alt="Filme divertidamente 2">
-                    <h2>Divertidamente 2</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
-                    <h2>Um lugar silencioso</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/to_de_graca.png" alt="Filme to de graça">
-                    <h2>To de Graça</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/bad_boys.png" alt="Bad boys">
-                    <h2>Bad Boys: Até o fim</h2>
-                </div>
+        <section class="todos_filmes">
+            <div class="filmes">
+                <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                <h2>Divertidamente 2</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                <h2>Um lugar silencioso</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/to_de_graca.png" alt="Filme to de graça">
+                <h2>To de Graça</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/bad_boys.png" alt="Bad boys">
+                <h2>Bad Boys: Até o fim</h2>
+            </div>
         </section>
         <h1>Em breve</h1>
-        <section class="todos_filmes">           
-                <div class="filmes">
-                    <img src="img/divertidamente.png" alt="Filme divertidamente 2">
-                    <h2>Divertidamente 2</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
-                    <h2>Um lugar silencioso</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/to_de_graca.png" alt="Filme to de graça">
-                    <h2>To de Graça</h2>
-                </div>
-                <div class="filmes">
-                    <img src="img/bad_boys.png" alt="Bad boys">
-                    <h2>Bad Boys: Até o fim</h2>
-                </div>
+        <section class="todos_filmes">
+            <div class="filmes">
+                <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                <h2>Divertidamente 2</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                <h2>Um lugar silencioso</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/to_de_graca.png" alt="Filme to de graça">
+                <h2>To de Graça</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/bad_boys.png" alt="Bad boys">
+                <h2>Bad Boys: Até o fim</h2>
+            </div>
         </section>
+        <nav class="navbar-inferior">
+            <li class="navbar-item">
+                <a href="#index"><span class="navbar-icone"><img src="img/icone-descobrir.png"
+                            alt="ícone descobrir"><span>Descobrir</span></span></a>
+            </li>
+            </li>
+            <li class="navbar-item">
+                <a href="#index"><span class="navbar-icone"><img src="img/icone-ingresso.png"
+                            alt="ícone ingresso"><span>Ingresso</span></span></a>
+            </li>
+            </li>
+            <li class="navbar-item">
+                <a href="#index"><span class="navbar-icone"><img src="img/icone-cinemas.png"
+                            alt="ícone cinemas"><span>Cinemas</span></span></a>
+            </li>
+            </li>
+            <li class="navbar-item">
+                <a href="#index"><span class="navbar-icone"><img src="img/icone-conta.png"
+                            alt="ícone conta"><span>Conta</span></span></a>
+            </li>
+            </li>
+        </nav>
     </main>
 </body>
 
