--- a/minha-conta.html
+++ b/minha-conta.html
@@ -22,7 +22,7 @@
       <img src="./img/Battery.svg" alt="">
     </header>
     <h1>Minha conta</h1>
-    <section class="conta-perfil">
+    <section class="perfil">
       <div class="container-esquerdo">
         <span>Nome</span>
         <span>Membro desde</span>
@@ -34,6 +34,22 @@
         <span>14 de jul. 2018</span>
         <span>R$43.98</span>
         <span>63</span>
+      </div>
+    </section>
+    <section class="recompensa-progresso">
+      <h3>Progresso de recompensa</h3>
+      <div class="progresso-icones">
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-ativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-inativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-inativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+        <span class="icone-inativo"><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+
       </div>
     </section>
     <nav class="navbar-inferior">
