:sparkles: feat: integração com arquivo js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <header>
             <img src="./img/Left Detail.svg" alt="">
-            <p> 9:41 AM</p>
+            <p class="hora-atual"></p>
             <img src="./img/Battery.svg" alt="">
         </header>
         <h1>Filmes em Destaque</h1>
@@ -81,6 +81,7 @@
             </li>
         </nav>
     </main>
+    <script src="./script.js"></script>
 </body>
 
 </html>
