--- a/index.html
+++ b/index.html
@@ -23,39 +23,94 @@
         <h1>Filmes em Destaque</h1>
         <section class="todos_filmes">
             <div class="filmes">
-                <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                <img src="img/divertidamente.png" alt="Capa do filme">
                 <h2>Divertidamente 2</h2>
+                        <p class="texto_filme">
+                            Com um salto temporal, Riley se encontra mais velha...<button class="saiba_mais">Saiba Mais</button>
+                            <dialog class="sinopse_filme">
+                                <p>
+                                Com um salto temporal, Riley se encontra mais velha, passando pela tão temida adolescência. Junto com o amadurecimento, a sala de controle também está passando por uma adaptação para dar lugar a algo totalmente inesperado: novas emoções.
+                                </p>
+                                <button class="sair">sair</button>
+                            </dialog>
+                        </p>
             </div>
             <div class="filmes">
-                <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                <img src="img/um lugar silencioso.png" alt="Capa do filme">
                 <h2>Um lugar silencioso</h2>
+                <p class="texto_filme">
+                    Uma mulher luta pela sobrevivência durante uma...<button class="saiba_mais">Saiba Mais</button>
+                    <dialog class="sinopse_filme">
+                        <p>
+                            Uma mulher luta pela sobrevivência durante uma invasão alienígena na cidade de Nova York.
+                        </p>
+                        <button class="sair">sair</button>
+                    </dialog>
+                </p>
             </div>
             <div class="filmes">
-                <img src="img/to_de_graca.png" alt="Filme to de graça">
+                <img src="img/to_de_graca.png" alt="Capa do filme">
                 <h2>To de Graça</h2>
+                <p class="texto_filme">
+                    A hilária Graça, mãe de Shubakira e mais...<button class="saiba_mais">Saiba Mais</button>
+                    <dialog class="sinopse_filme">
+                        <p>
+                            A hilária Graça, mãe de Shubakira, Maico, Briti Sprite e mais onze, viaja com a prole para Búzios, onde se mete em várias confusões enquanto se desdobra para manter a família unida.
+                        </p>
+                        <button class="sair">sair</button>
+                    </dialog>
+                </p>
             </div>
             <div class="filmes">
-                <img src="img/bad_boys.png" alt="Bad boys">
+                <img src="img/bad_boys.png" alt="Capa do filme">
                 <h2>Bad Boys: Até o fim</h2>
+                <p class="texto_filme">
+                    Os brincalhões polícias de Miami, Mike Lowrey e Marcus Burnett, embarcam em...<button class="saiba_mais">Saiba Mais</button>
+                    <dialog class="sinopse_filme">
+                        <p>
+                            Os brincalhões polícias de Miami, Mike Lowrey e Marcus Burnett, embarcam em uma perigosa missão para limpar o nome do falecido capitão da polícia.
+                        </p>
+                        <button class="sair">sair</button>
+                    </dialog>
+                </p>
             </div>
         </section>
         <h1>Em breve</h1>
         <section class="todos_filmes">
             <div class="filmes">
-                <img src="img/divertidamente.png" alt="Filme divertidamente 2">
+                <img src="img/divertidamente.png" alt="Capa do filme">
                 <h2>Divertidamente 2</h2>
             </div>
             <div class="filmes">
-                <img src="img/um lugar silencioso.png" alt="Filme um lugar silencioso">
+                <img src="img/um lugar silencioso.png" alt="Capa do filme">
                 <h2>Um lugar silencioso</h2>
             </div>
             <div class="filmes">
-                <img src="img/to_de_graca.png" alt="Filme to de graça">
+                <img src="img/to_de_graca.png" alt="Capa do filme">
                 <h2>To de Graça</h2>
             </div>
             <div class="filmes">
-                <img src="img/bad_boys.png" alt="Bad boys">
+                <img src="img/bad_boys.png" alt="Capa do filme">
                 <h2>Bad Boys: Até o fim</h2>
+            </div>
+        </section>
+        <h1>Recentemente Assistido</h1>
+        <section class="todos_filmes">
+            <div class="filmes">
+                <img src="img/divertidamente.png" alt="Capa do filme">
+                <h2>Garfield 2: Fora de casa</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/um lugar silencioso.png" alt="Capa do filme">
+                <h2>A teia</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/to_de_graca.png" alt="Capa do filme">
+                <h2>Os observadores</h2>
+            </div>
+            <div class="filmes">
+                <img src="img/bad_boys.png" alt="Capa do filme">
+                <h2>Planeta dos Macacos: O reinado</h2>
             </div>
         </section>
         <nav class="navbar-inferior">
