adicionando mais sections da página

--- a/minha-conta.html
+++ b/minha-conta.html
@@ -52,6 +52,36 @@
 
       </div>
     </section>
+    <section class="recompensas-ativas">
+      <h3>Recompensas ativas</h3>
+      <div class="recompensas-container">
+        <div class="recompensa">
+          <div class="recompensa-info">
+            <span><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+            <p>Free Movie Ticket</p>
+          </div>
+          <button>Ativar</button>
+        </div>
+        <div class="recompensa">
+          <div class="recompensa-info">
+            <span><img src="/img/icone-ingresso.png" alt="ícone ingresso"></span>
+            <p>Free Birthday Popcorn</p>
+          </div>
+          <button>Ativar</button>
+        </div>
+      </div>
+    </section>
+    <section class="visto-recentemente">
+      <h3>Visto recentemente</h3>
+    </section>
+    <section class="detalhes">
+      <h3>Detalhes da conta</h3>
+      <div class="detalhes-links">
+        <a href="#">Atualizar email</a>
+        <a href="#">Mudar senha</a>
+        <a href="#">Excluir conta</a>
+      </div>
+    </section>
     <nav class="navbar-inferior">
       <li class="navbar-item">
         <a href="#index"><span class="navbar-icone"><img src="img/icone-descobrir.png"
