:recycle: refactor: alterado botão de fechar modal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <p>
                             Com um salto temporal, Riley se encontra mais velha, passando pela tão temida adolescência. Junto com o amadurecimento, a sala de controle também está passando por uma adaptação para dar lugar a algo totalmente inesperado: novas emoções.
                         </p>
-                        <button class="sair">Sair</button>
+                        <button class="sair">X</button>
                     </div>
                 </p>
                 
@@ -48,7 +48,7 @@
                         <p>
                             Uma mulher luta pela sobrevivência durante uma invasão alienígena na cidade de Nova York.
                         </p>
-                        <button class="sair">sair</button>
+                        <button class="sair">X</button>
                     </div>
                 </p>
                 
@@ -63,7 +63,7 @@
                         <p>
                             A hilária Graça, mãe de Shubakira, Maico, Briti Sprite e mais onze, viaja com a prole para Búzios, onde se mete em várias confusões enquanto se desdobra para manter a família unida.
                         </p>
-                        <button class="sair">sair</button>
+                        <button class="sair">X</button>
                     </div>
                 </p>
             </div>
@@ -77,7 +77,7 @@
                         <p>
                             Os brincalhões polícias de Miami, Mike Lowrey e Marcus Burnett, embarcam em uma perigosa missão para limpar o nome do falecido capitão da polícia.
                         </p>
-                        <button class="sair">sair</button>
+                        <button class="sair">X</button>
                     </div>
                 </p>
             </div>
