página de cinemas adicionada

--- a/cinemas.html
+++ b/cinemas.html
@@ -22,11 +22,15 @@
             <p class="hora-atual"></p>
             <img src="./img/Battery.svg" alt="">
         </header>
-        <h1>Cinemas</h1>
+        <h1 class="title">Cinemas</h1>
         <div id="mapid"></div>
         <section>
             <h1>Cinema Iguatemi</h1>
-            <h1>Cinema Rio Mar</h1>
+            <p>Av. Washington Soares, 85 - Edson Queiroz, Fortaleza - CE, 60811-341</p>
+            <h1>Cinema Rio Mar Kennedy</h1>
+            <p>Av. Sgt. Hermínio Sampaio, 3100 - 3001 - Pres. Kennedy, Fortaleza - CE, 60320-504</p>
+            <h1>Cinema North Shopping Jóquei</h1>
+            <p>North Shopping Jóquei, Av. Lineu Machado, 419 - Jóquei Clube, Fortaleza - CE, 60520-102</p>
         </section>
 
         <footer class="navbar-inferior">
