ajustes na página minha-conta

--- a/minha-conta.html
+++ b/minha-conta.html
@@ -71,8 +71,26 @@
         </div>
       </div>
     </section>
-    <section class="visto-recentemente">
+    <section id="visto-recentemente">
       <h3>Visto recentemente</h3>
+      <div class="todos_filmes">
+        <div class="filmes">
+          <img src="img/divertidamente.png" alt="Capa do filme">
+          <h2>Divertidamente 2</h2>
+        </div>
+        <div class="filmes">
+          <img src="img/um lugar silencioso.png" alt="Capa do filme">
+          <h2>Um lugar silencioso: dia um</h2>
+        </div>
+        <div class="filmes">
+          <img src="img/to_de_graca.png" alt="Capa do filme">
+          <h2>Tô de Graça</h2>
+        </div>
+        <div class="filmes">
+          <img src="img/bad_boys.png" alt="Capa do filme">
+          <h2>Bad boys: até o fim</h2>
+        </div>
+      </div>
     </section>
     <section class="detalhes">
       <h3>Detalhes da conta</h3>
@@ -105,6 +123,7 @@
       </li>
     </nav>
   </main>
+  <script src="./script.js"></script>
 </body>
 
 </html>
